--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 5050"
+    "preview": "vite preview --port 5050",
+    "backend": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
+    "json": "^11.0.0",
+    "server": "^0.0.3",
     "vue": "^3.2.33"
   },
   "devDependencies": {
